kubeflow-deployments/gcp-private-0527/.build/kubeflow-apps/admissionregistration.k8s.io_v1beta1_mutatingwebhookconfiguration_admission-webhook-mutating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: admission-webhook-mutating-webhook-configuration
  labels:
    app: admission-webhook
    app.kubernetes.io/component: poddefaults
    app.kubernetes.io/name: poddefaults
    kustomize.component: admission-webhook
  annotations:
    cert-manager.io/inject-ca-from: kubeflow/admission-webhook-cert
webhooks:
- name: admission-webhook-deployment.kubeflow.org
  clientConfig:
    service:
      name: admission-webhook-service
      namespace: kubeflow
      path: /apply-poddefault
    caBundle: ""
  rules:
  - resources:
    - pods
    apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
